Move '/suites/<suite_uuid>/<instance_uuid>/<build_id>' to '/instances/<instance_uuid>/builds/<build_id>'
